--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
-.App {
+:root {
+  --primary-color: #2C3E50;
+  --secondary-color: #ECF0F1;
+  --background-color: #F9F9F9;
+  --highlight-color: #3498DB;
+}
+body {
+  background-color: var(--background-color);
+  color: var(--primary-color);
+} 
+
+.app-container {
+  display: flex;
+  height: 100vh;
+}
+
+h2 {
+  color: var(--primary-color);
+  text-transform: capitalize;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.para{
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.customer-list {
+  width: 25%;
+  overflow-y: auto;
+  border-right: 1px solid #ddd;
+}
+
+.customer-card {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.customer-card.selected {
+  background-color: var(--highlight-color);
+}
+
+.customer-details {
+  padding: 20px;
+  width: 75%;
+  background-color: var(--background-color);
+  overflow-y: auto;
+}
+
+.photo-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.photo-grid img {
+  width: 100%;
+  height: 200px;
+  border-radius: 8px;
+  object-fit: cover;
+  border: 2px solid var(--secondary-color);
+}
+
+@media(max-width: 768px) {
+ 
+    .customer-list {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      overflow-x: auto;
+      border-right: none;
+      border-bottom: 1px solid #ddd;
+      white-space: nowrap;
+      position: absolute;
+    }
+  
+    .customer-card {
+      display: inline-block;
+      width: auto;
+      border-bottom: none;
+      border-right: 1px solid #ddd;
+    }
+
+  .customer-details {
+    width: 100%; 
+    margin-top: 7rem;
+  }
+
+}
+
+@media(max-width: 560px) {
+  .photo-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media(max-width: 380px) {
+  .photo-grid {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Customizing Scrollbar */
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
 }
 
-.App-link {
-  color: #61dafb;
+::-webkit-scrollbar-thumb {
+  background-color: #3498DB;
+  border-radius: 6px;
+  border: 3px solid #f0f0f0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2980B9;
+
+}
+
+@media(max-width: 768px) {
+  .customer-list::-webkit-scrollbar {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 3px;
   }
 }
+/* Customizing Scrollbar */
